hphp/test/zend/good/tests/classes/constants_error_001.php.expectf

Fatal error: Cannot redeclare myclass::myConst in %s/constants_error_001.php on line 5
